<resources>
    <string name="app_name">FrolloSDK Sample</string>

    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_web_login">Web Login</string>
    <string name="str_logout">Logout</string>

    <string name="str_logging_in">Logging in&#8230;</string>
    <string name="str_adding_account">Adding account&#8230;</string>
    <string name="str_deleting_account">Deleting account&#8230;</string>
    <string name="str_deleting_goal">Deleting goal&#8230;</string>
    <string name="str_updating_goal">Updating goal&#8230;</string>

    <string name="str_menu_profile">Profile</string>
    <string name="str_menu_add">Add</string>
    <string name="str_menu_save">Save</string>
    <string name="str_menu_done">Done</string>
    <string name="str_menu_delete_account">Delete Account</string>
    <string name="str_menu_create">Create</string>
    <string name="str_menu_delete_goal">Delete Goal</string>

    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_transaction_details">Details</string>
    <string name="title_provider_accounts">Provider Accounts</string>
    <string name="title_transaction_categories">Categories</string>
    <string name="title_merchants">Merchants</string>
    <string name="title_reports">Reports</string>
    <string name="title_balance_reports">Balance Reports</string>
    <string name="title_bills">Bills</string>
    <string name="title_bill_payments">Bill Payments</string>
    <string name="title_search_transactions">Search Transactions</string>
    <string name="title_add_tag">Add Tag</string>
    <string name="title_search_tags">Search Tags</string>
    <string name="title_user_tags">User Tags</string>
    <string name="title_suggested_tags">Suggested Tags</string>
    <string name="title_others">More</string>
    <string name="title_goals">Goals</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_goal_target">Target of Goal</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="title_select_account">Select Account</string>
    <string name="title_goal_periods">Periods</string>
    <string name="title_add_budget">Add budget</string>
    <string name="title_budget_periods">Periods</string>

    <string name="str_add_provider">Add Provider</string>
    <string name="str_add_account">Add Account</string>
    <string name="str_unknown_provider_account">Unknown Provider Account</string>
    <string name="str_accounts_count">%d Accounts</string>
    <string name="str_excluded">Excluded</string>
    <string name="str_add_tags">Add your tags</string>

    <string name="str_account_balances_report">Account Balances Report</string>
    <string name="str_transactions_report">Transactions Report</string>
    <string name="str_report_type">Report Type</string>
    <string name="str_report_period">Period</string>
    <string name="str_report_transaction_category">Transaction Category (Optional)</string>
    <string name="str_report_merchant">Merchant (Optional)</string>
    <string name="str_report_budget_category">Budget Category (Optional)</string>
    <string name="str_report_tag">Tag (Optional)</string>
    <string name="str_report_grouping">Grouping (Optional)</string>
    <string name="str_default_or_all">ALL / Default</string>
    <string name="str_fetch_report">Fetch Report</string>
    <string name="str_report_type_budget_category">Budget Category</string>
    <string name="str_report_type_transaction_category">Transaction Category</string>
    <string name="str_report_type_merchant">Merchant</string>
    <string name="str_report_type_tag">Tag</string>
    <string name="str_report_type_budget_categories">Budget Categories</string>
    <string name="str_report_type_transaction_categories">Transaction Categories</string>
    <string name="str_report_type_merchants">Merchants</string>
    <string name="str_report_type_tags">Tags</string>
    <string name="str_report_type_grouping">Grouping</string>

    <string name="str_goal_target_amount">Amount</string>
    <string name="str_goal_target_date">Date</string>
    <string name="str_goal_target_open_ended">Open Ended</string>
    <string name="str_goal_name_hint">Name</string>
    <string name="str_goal_description_hint">Description</string>
    <string name="str_goal_account">Account</string>
    <string name="str_goal_select_account">Select Account</string>
    <string name="str_goal_tracking_method">Tracking Method</string>
    <string name="str_goal_frequency">Frequency</string>
    <string name="str_goal_target_amount_text">Target Amount</string>
    <string name="str_goal_target_amount_hint">$1,000</string>
    <string name="str_goal_period_amount">Period Amount</string>
    <string name="str_goal_period_amount_hint">$200</string>
    <string name="str_goal_start_date">Start Date</string>
    <string name="str_goal_end_date">End Date</string>

    <string name="str_next_due">Next due: %s</string>

    <string name="str_profile_name">Name</string>
    <string name="str_profile_email">Email</string>

    <string name="add_budget_budget_category">Budget Category</string>
    <string name="add_budget_transaction_category">Transaction Category</string>
    <string name="add_budget_select">Select</string>
    <string name="add_budget_merchant">Merchant</string>
    <string name="str_budget_start_date">Start Date (Optional)</string>
    <string name="add_budget_image_hint">https://www.google.com/some/image.jpg</string>
    <string name="budget_period_delete">Deleting budget</string>
    <string name="budget_period_update">Updating budget</string>
    <string name="budget_period_delete_budget">Delete Budget</string>

</resources>
