<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_report_type"/>
        <Spinner
            android:id="@+id/spinner_report_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_report_period"/>
        <Spinner
            android:id="@+id/spinner_period"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_background"/>

        <us.frollo.frollosdksample.view.custom.LabelledTextView
            android:id="@+id/text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:label="@string/str_report_transaction_category"/>

        <us.frollo.frollosdksample.view.custom.LabelledTextView
            android:id="@+id/text_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:label="@string/str_report_merchant"/>

        <us.frollo.frollosdksample.view.custom.LabelledTextView
            android:id="@+id/text_budget_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:label="@string/str_report_budget_category"/>

        <us.frollo.frollosdksample.view.custom.LabelledTextView
            android:id="@+id/text_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:label="@string/str_report_tag"/>

        <us.frollo.frollosdksample.view.custom.LabelledTextView
            android:id="@+id/text_report_grouping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            app:label="@string/str_report_grouping"/>

        <Button
            android:id="@+id/btn_fetch_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_fetch_report"/>

    </LinearLayout>
</ScrollView>