<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBorder">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@android:color/white"
            app:iconifiedByDefault="false"
            app:queryHint="@string/title_search_tags"
            app:queryBackground="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/str_menu_add"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_section_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/title_user_tags"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_user_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_section_suggested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/title_suggested_tags"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_suggested_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>