<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/str_goal_name_hint"
            android:textColor="@android:color/black"
            android:inputType="textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/str_goal_description_hint"
            android:textColor="@android:color/black"
            android:inputType="textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <LinearLayout
            android:id="@+id/sectionAccount"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_account" />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:hint="@string/str_goal_select_account" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionTrackingType"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionAccount">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_tracking_method" />

            <TextView
                android:id="@+id/trackingType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                tools:text="Credit"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionFrequency"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionTrackingType">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_frequency" />

            <TextView
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                tools:text="Weekly"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionTargetAmount"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionFrequency">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_target_amount_text" />

            <EditText
                android:id="@+id/targetAmount"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/str_goal_target_amount_hint"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionPeriodAmount"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionTargetAmount">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_period_amount" />

            <EditText
                android:id="@+id/periodAmount"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/str_goal_period_amount_hint"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionStartDate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionPeriodAmount">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_start_date" />

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                tools:text="7/29/19"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionEndDate"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionStartDate">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:text="@string/str_goal_end_date" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                tools:text="11/29/19"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>