<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/str_profile_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/label_name"
        app:layout_constraintStart_toEndOf="@id/label_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/black"
        tools:text="Firstname Lastname"/>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/str_profile_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/label_email"
        app:layout_constraintStart_toEndOf="@id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/black"
        tools:text="abc@xyz.com"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/str_logout"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>